[project]
name = "interactive-drl-research-lab"
version = "1.0.0"
description = "Interactive Deep Reinforcement Learning Research Lab with DQN, PPO, and A2C"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "stable-baselines3[extra]",
    "gym",
    "box2d",
    "pyglet",
    "streamlit",
    "plotly",
    "pandas",
    "numpy",
    "imageio",
    "pillow",
]
