[project]
name = "interactive-drl-research-lab"
version = "1.0.0"
description = "Interactive Deep Reinforcement Learning Research Lab with DQN, PPO, and A2C"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "stable-baselines3[extra]",
    "gymnasium[box2d]",
    "pyglet",
    "streamlit",
    "plotly",
    "pandas",
    "numpy",
    "imageio",
    "pillow",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [".venv", "uv.lock"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
